STARKA-43 Accept edge indel pattern produced by freeBayes/BamLeftAlign
STARKA-45 Filter indels greater than max indel size from candidate indel vcf 
v2.0.14
STARKA-41 Fix consensus open-breakend error
v2.0.13
Skip BWA-mem supplementary reads
STARKA-37 Handle Skip-Delete-Skip pattern in tophat output
STARKA-23 Accept an input VCF file for which each alternate allele must be genotyped
STARKA-35 Fixed 255 q-score bug for RNAseq workflow
v2.0.12
STARKA-34 Properly handle insertions adjacent to introns
Filter out all open-breakends from vcf output
v2.0.11
STARKA-14 Add option to provide sample name in output VCF SAMPLE column
VQSR features
v2.0.10
STARKA-30 fix stability issue encounted with large indels in 2x400 reads
v2.0.9
STARKA-32 fix handling of another complex indel on read edge
v2.0.8
STARKA-27 correctly handle complex insert/delete indels for read edges
v2.0.7
STARKA-12 tolerate all edge insertions/deletions
STARKA-17 Add option to output gVCF with no block compression
STARKA-24 fix gVCF site records to correctly inherit spanning deletion filters
v2.0.6
Change makefile to build when cwd is not in PATH
v2.0.5
Associated with new parent strelka workflow release, no major chaages from v2.0.4
v2.0.4
- STARKA-21 Add command-line control for snv hpol filter. Set snv and indel hpol filters
off by default.
- STARKA-22 Reorganize build system around libraries, add unit test framework as
part of every build and seed framework with a few tests for each library
v2.0.3
- STARKA-16 fix gVCF output so that GT does not contain allele numbers which are
not in the ALT tag
- Add win32 compat fixes from Eric Roller
- STARKA-13 Groom CIGAR alignments on input to remove zero-length and PAD
segments
- STARKA-11 Samtools upgraded to 0.1.18 to resolve issues reported for 
strelka run with long-line version of hg19 reference.
v2.0.2
- Add haplotype score option to command-line
v2.0.1
- Added command-line controls for for "R8" indel filter and strand-bias
v2.0.0